Fixed gradient control alignment

--- a/src/blocks/buttons-child/style.scss
+++ b/src/blocks/buttons-child/style.scss
@@ -20,3 +20,7 @@
 		}
 	}
 }
+
+.uagb-gradient-picker .components-flex.components-custom-gradient-picker__ui-line {
+	align-items: first baseline;
+}
